force-app/main/default/objects/AccountService__x/AccountService__x.object-meta.xml
<CustomObject>
    <externalDataSource>ExternalDataSource1</externalDataSource>
    <externalName>AccountService</externalName>
    <label>Account Service</label>
    <pluralLabel>Account Services</pluralLabel>
</CustomObject>