force-app/main/default/objects/AccountService__x/fields/BankIssuedCreditCard__c.field-meta.xml
<CustomField>
    <fullName>BankIssuedCreditCard__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>BankIssuedCreditCard</externalDeveloperName>
    <label>Bank Issued Credit Card</label>
    <type>Checkbox</type>
</CustomField>