force-app/main/default/objects/AccountService__x/fields/BudgetManagement__c.field-meta.xml
<CustomField>
    <fullName>BudgetManagement__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>BudgetManagement</externalDeveloperName>
    <label>Budget  Management</label>
    <type>Checkbox</type>
</CustomField>