force-app/main/default/objects/AccountService__x/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <externalDeveloperName>Customer</externalDeveloperName>
    <label>Customer</label>
    <length>20</length>
    <referenceTargetField>Customer__c.GUID__c</referenceTargetField>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>Account Services</relationshipLabel>
    <relationshipName>Account_Services</relationshipName>
    <type>IndirectLookup</type>
</CustomField>