force-app/main/default/objects/AccountService__x/fields/FinancialMarket__c.field-meta.xml
<CustomField>
    <fullName>FinancialMarket__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>FinancialMarket</externalDeveloperName>
    <label>Financial Market</label>
    <type>Checkbox</type>
</CustomField>