force-app/main/default/objects/AccountService__x/fields/InternetUser__c.field-meta.xml
<CustomField>
    <fullName>InternetUser__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>InternetUser</externalDeveloperName>
    <label>Internet User</label>
    <type>Checkbox</type>
</CustomField>