force-app/main/default/objects/AccountService__x/fields/MobileAppUser__c.field-meta.xml
<CustomField>
    <fullName>MobileAppUser__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>MobileAppUser</externalDeveloperName>
    <label>Mobile App User</label>
    <type>Checkbox</type>
</CustomField>