force-app/main/default/objects/AccountService__x/fields/OnTime__c.field-meta.xml
<CustomField>
    <fullName>OnTime__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>OnTime</externalDeveloperName>
    <label>On Time</label>
    <type>Checkbox</type>
</CustomField>