force-app/main/default/objects/AccountService__x/fields/PoalimInternetUser__c.field-meta.xml
<CustomField>
    <fullName>PoalimInternetUser__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>PoalimInternetUser</externalDeveloperName>
    <label>Poalim Internet User</label>
    <type>Checkbox</type>
</CustomField>