force-app/main/default/objects/AccountService__x/fields/PoalimPhone__c.field-meta.xml
<CustomField>
    <fullName>PoalimPhone__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>PoalimPhone</externalDeveloperName>
    <label>Poalim  on the Phone</label>
    <type>Checkbox</type>
</CustomField>