force-app/main/default/objects/AccountService__x/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <externalDeveloperName>Name</externalDeveloperName>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>