force-app/main/default/objects/AccountService__x/fields/UpCardUser__c.field-meta.xml
<CustomField>
    <fullName>UpCardUser__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UpCardUser</externalDeveloperName>
    <label>Up Card User</label>
    <type>Checkbox</type>
</CustomField>